# royaltracer

./: .gitignore  LICENSE  README.md
backend/: CMakeLists.txt  README.txt  vcpkg.json
backend/src/: main.cpp
backend/src/api/: WebEditorFacade.cpp  WebEditorFacade.h
backend/src/architecture/: EditorFacade.cpp  EditorFacade.h  Image.cpp  Image.h  MtlStorageSystem.cpp  MtlStorageSystem.h  ObjStorageSystem.cpp  ObjStorageSystem.h  Parser.h  RaytracingFacade.cpp  RaytracingFacade.h  ResourceTypes.h  RoyalMediator.cpp  RoyalMediator.h  TxrStorageSystem.cpp  TxrStorageSystem.h
backend/src/interfaces/: Checkable.cpp  Checkable.h  Colleague.cpp  Colleague.h  Observer.cpp  Observer.h  Singleton.h  StorageSystem.h
backend/src/raytracer/: OpenCLRaytracingFacade.cpp  OpenCLRaytracingFacade.h
backend/src/raytracer/BVH/: BVH.cpp  BVH.h  BVHUtils.cpp  BVHUtils.h
backend/src/raytracer/KernelManager/: KernelManager.cpp  KernelManager.h
backend/src/raytracer/OutputLayer/: ImageDenoiser.cpp  ImageDenoiser.h  ImageTools.cpp  ImageTools.h
backend/src/raytracer/PrecomputeLayer/: PrecomputeKernelCommunicator.cpp  PrecomputeKernelCommunicator.h  PrecomputeLayer.cpp  PrecomputeLayer.h
backend/src/raytracer/RayTracerManagingLayer/: ConfigParser.cpp  ConfigParser.h  RTManager.cpp  RTManager.h
backend/src/raytracer/SceneArchitecture/: OptimizedKernelStructs.h  SceneStructs.h
backend/src/raytracer/kernelFiles/: KernelBRDF.h  KernelConstants.h  KernelLights.h  KernelMapTools.h  KernelRayIntersection.h  KernelStructs.h  KernelTools.h  KernelTrace.h  KernelTransferStructs.h  kernel.cl  kernelV3.cl  testKernel.cl  transformation.cl
backend/src/utils/: MTLParser.cpp  MTLParser.h  Map.h  Material.h  MathUtils.cpp  MathUtils.h  OBJParser.cpp  OBJParser.hpp  ParsedTriangle.h  SimpleTriangle.h  ThreeDObject.hpp  base64pp.cpp  base64pp.h  lexpp.h  vectorFunctions.h
backend/test/: arch_tests.h  master.cpp  raytracer_tests.h  utils_tests.h
docs/: README.md
docs/Documentation/: Architecture-Design.md  Conceptual-Description.md  README.md  Setup-Instruction.md  Sources.md  Testing.md
docs/Literature/: README.md
editor/: editor.py  package-lock.json  package.json
editor/src/: YAMLParser.js  config.json  enumTypes.js  index.html  main.js  package.json  start.sh  style.css  webpack.config.cjs
editor/src/editor_tabs/: animator.js  tab.js  tabsController.js  workspaceTab.js
editor/src/editor_tabs/animatorElement/: AnimatorElement.js  KeyFrame.js
editor/src/mvc/: controller.js  mapparser.js  model.js  observer.js  requestView.js  subject.js  view.js
editor/src/page_elements/: overview.js  popup.js  top.js
editor/src/page_elements/inspector/: cameraInspector.js  inspector.js  inspectorComposite.js  lightInspector.js  objectInspector.js
